--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -380,11 +380,10 @@
   </div>
 
   <!-- Next Steps -->
-  <h2>Next Steps</h2>
-  <p>You can do the <a href ='https://bitbucket.org/nitryx-team/rh-dev-1/wiki/Home#markdown-header-33-task-3' target="_blank">task #3</a> here</p>
+  <!-- <h2>Next Steps</h2>
+  <p>You can do the <a href ='https://bitbucket.org/nitryx-team/rh-dev-1/wiki/Home#markdown-header-33-task-3' target="_blank">task #3</a> here</p> -->
 
-
-
-
+  <h1>TASKS METRYX</h1>
+  <CompanyComponent></CompanyComponent>
 
 <router-outlet></router-outlet>
